--- a/app/views/directors/index.html.erb
+++ b/app/views/directors/index.html.erb
@@ -1,5 +1,5 @@
 <h1> Director Index </h1>
 
 <% @directors.each do |director| %>
-<p><%= director.name %><p>
+<p><%= director.name %> - created: <%= director.created_at %><p>
 <% end %>
