Finish director movie count

--- a/app/views/directors/show.html.erb
+++ b/app/views/directors/show.html.erb
@@ -1,5 +1,6 @@
 <h1><%= @director.name %></h1>
-<p>Born: <%= "#{@director.birth_year}, #{@director.birth_place}"%></p><br/>
+<p>Born: <%= "#{@director.birth_year}, #{@director.birth_place}"%></p>
 <p>Still Active?: <%= @director.still_active %></p>
+<p>Movie Count: <%= @director.movie_count %>
 
 
