Add linked headers and associated tests

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   </head>
 
   <body>
+    <%= link_to 'Movie Index', '/movies/' %><br/>
+    <%= link_to 'Director Index', '/directors/' %>
     <%= yield %>
   </body>
 </html>
