--- a/app/views/directors/new.html.erb
+++ b/app/views/directors/new.html.erb
@@ -6,6 +6,6 @@
   <%= form.label :birth_place, "Birth Place" %>
   <%= form.text_field :birth_place %>
   <%= form.label :still_active, "Still Active?" %>
-  <%= form.check_box :still_active %>
+  <%= form.text_field :still_active %>
   <%= form.submit 'Create Director' %>
 <% end %>
