--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,7 +1,7 @@
 <h1> Movies Index </h1>
 
 <% @movies.each do |movie| %>
-<h3><%= movie.name %></h3>
+<h3><a href="/movies/<%=movie.id%>"><%= movie.name %></a></h3>
 <p><%= "#{movie.release_year} - #{movie.mpaa_rating} - #{movie.run_time} mins" %></p>
 <p><%= "Rotten Tomatoes Score: #{movie.rotten_tomatoes_score}%"%> </p>
 <p><%= "Oscar Winner?: #{movie.oscar_winner}"%> </p><br/>
