Add movie update to movies and director movies page

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -4,5 +4,6 @@
 <h3><a href="/movies/<%=movie.id%>"><%= movie.name %></a></h3>
 <p><%= "#{movie.release_year} - #{movie.mpaa_rating} - #{movie.run_time} mins" %></p>
 <p><%= "Rotten Tomatoes Score: #{movie.rotten_tomatoes_score}%"%> </p>
-<p><%= "Oscar Winner?: #{movie.oscar_winner}"%> </p><br/>
+<p><%= "Oscar Winner?: #{movie.oscar_winner}"%> </p>
+<p><%= button_to 'Edit', "/movies/#{movie.id}/edit", method: :get %></p><br/>
 <% end %>
