--- a/app/views/directors/index.html.erb
+++ b/app/views/directors/index.html.erb
@@ -2,7 +2,7 @@
 
 <% @directors.each do |director| %>
 <p><a href="/directors/<%= director.id %>"><%= director.name %></a> - created: <%= director.created_at %><p><br/>
-<%= link_to 'Edit', "/directors/#{director.id}/edit" %><br/>
+<%= button_to 'Edit', "/directors/#{director.id}/edit", method: :get %><br/>
 <% end %>
 
 <%= link_to 'New Director', '/directors/new' %>
