--- a/app/views/directors/index.html.erb
+++ b/app/views/directors/index.html.erb
@@ -1,8 +1,8 @@
 <h1> Director Index </h1>
 
 <% @directors.each do |director| %>
-<p><a href="/directors/<%= director.id %>"><%= director.name %></a> - created: <%= director.created_at %><p><br/>
+<p><a href="/directors/<%= director.id %>"><%= director.name %></a> - created: <%= director.created_at %><p>
 <%= button_to 'Edit', "/directors/#{director.id}/edit", method: :get %><br/>
 <% end %>
-
-<%= link_to 'New Director', '/directors/new' %>
+<br/>
+<h4><%= link_to 'New Director', '/directors/new' %></h4>
