--- a/app/views/directors/show.html.erb
+++ b/app/views/directors/show.html.erb
@@ -3,6 +3,7 @@
 <p>Still Active?: <%= @director.still_active %></p>
 <p>Movie Count: <%= @director.movie_count %></p>
 <%= button_to 'Movies', "/directors/#{@director.id}/movies", method: :get %>
+<%= button_to 'Delete', "/directors/#{@director.id}", method: :delete %>
 <%= link_to 'Update Director', "/directors/#{@director.id}/edit" %>
 
 
