Added delete functionality for movies

--- a/app/views/directors_movies/index.html.erb
+++ b/app/views/directors_movies/index.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @director.name %></h1>
 <% @movies.each do |movie| %>
-<h3><%= movie.name %></h3>
+<h3><%= link_to movie.name, "/movies/#{movie.id}" %></h3>
 <p><%= "#{movie.release_year} - #{movie.mpaa_rating} - #{movie.run_time} mins" %></p>
 <p><%= "Rotten Tomatoes Score: #{movie.rotten_tomatoes_score}%"%> </p>
 <p><%= "Oscar Winner?: #{movie.oscar_winner}"%> </p>
