--- a/app/views/directors_movies/index.html.erb
+++ b/app/views/directors_movies/index.html.erb
@@ -6,4 +6,9 @@
 <p><%= "Oscar Winner?: #{movie.oscar_winner}"%> </p>
 <p><%= button_to "Edit", "/movies/#{movie.id}/edit", method: :get %></p><br/>
 <% end %>
-<%= link_to "Create Movie", "/directors/#{@director.id}/movies/new" %>
+<%= link_to "Create Movie", "/directors/#{@director.id}/movies/new" %><br/><br/>
+
+<%= form_with url: "/directors/#{@director.id}/movies", local: true do |form| %>
+  <%= form.number_field :rotten_tomatoes, in: 0..100, step: 1 %>
+  <%= form.submit "Only Return Records with More Than % Rotten Tomatoes Score" %>
+<% end %>
