Add Delete functionality to movie and director movie index page

--- a/app/views/directors_movies/index.html.erb
+++ b/app/views/directors_movies/index.html.erb
@@ -4,7 +4,8 @@
 <p><%= "#{movie.release_year} - #{movie.mpaa_rating} - #{movie.run_time} mins" %></p>
 <p><%= "Rotten Tomatoes Score: #{movie.rotten_tomatoes_score}%"%> </p>
 <p><%= "Oscar Winner?: #{movie.oscar_winner}"%> </p>
-<p><%= button_to "Edit", "/movies/#{movie.id}/edit", method: :get %></p><br/>
+<p><%= button_to "Edit", "/movies/#{movie.id}/edit", method: :get %></p>
+<p><%= button_to "Delete", "/movies/#{movie.id}", method: :delete %></p><br/>
 <% end %>
 <%= link_to "Create Movie", "/directors/#{@director.id}/movies/new" %><br/><br/>
 
