--- a/app/views/directors/index.html.erb
+++ b/app/views/directors/index.html.erb
@@ -1,4 +1,11 @@
 <h1> Director Index </h1>
+<%= form_with url: '/directors', method: :get, local: true do |form| %>
+  <%= form.label :search %>
+  <%= form.text_field :search %>
+  <%= form.label :partial_search, 'Partial Search' %>
+  <%= form.text_field :partial_search %>
+  <%= form.submit 'Search Directors' %>
+<% end %>
 
 <% @directors.each do |director| %>
 <p><a href="/directors/<%= director.id %>"><%= director.name %></a> - created: <%= director.created_at %><p>
