--- a/app/views/directors/index.html.erb
+++ b/app/views/directors/index.html.erb
@@ -2,8 +2,10 @@
 <%= form_with url: '/directors', method: :get, local: true do |form| %>
   <%= form.label :search %>
   <%= form.text_field :search %>
-  <%= form.label :partial_search, 'Partial Search' %>
-  <%= form.text_field :partial_search %>
+
+  <%= form.label :exact_match, "Exact Matches Only" %>
+  <%= form.check_box :exact_match %>
+
   <%= form.submit 'Search Directors' %>
 <% end %>
 
