Refactor sort by movie count extension

--- a/app/views/directors/index.html.erb
+++ b/app/views/directors/index.html.erb
@@ -16,4 +16,4 @@
 <% end %>
 <br/>
 <h4><%= link_to 'New Director', '/directors/new' %></h4>
-<h4><%= link_to 'Sort Directors by Movie Count', '/directors/sort' %></h4>
+<h4><%= link_to 'Sort By Movie Count', '/directors?sort=moviecount' %></h4>
