--- a/app/views/directors_movies/index.html.erb
+++ b/app/views/directors_movies/index.html.erb
@@ -7,7 +7,10 @@
 <p><%= button_to "Edit", "/movies/#{movie.id}/edit", method: :get %></p>
 <p><%= button_to "Delete", "/movies/#{movie.id}", method: :delete %></p><br>
 <% end %>
-<h4><%= link_to "Create Movie", "/directors/#{@director.id}/movies/new" %><h4><br/><br/>
+
+<h4><%= link_to "Create Movie", "/directors/#{@director.id}/movies/new" %></h4>
+<h4><%= link_to "Sort Movies Alphabetically", "/directors/#{@director.id}/movies?sort=alpha" %></h4>
+<br/><br/>
 
 <%= form_with url: "/directors/#{@director.id}/movies", local: true do |form| %>
   <%= form.number_field :rotten_tomatoes, in: 0..100, step: 1 %>
