--- a/app/views/directors/index.html.erb
+++ b/app/views/directors/index.html.erb
@@ -11,8 +11,10 @@
 
 <% @directors.each do |director| %>
 <p><a href="/directors/<%= director.id %>"><%= director.name %></a> - created: <%= director.created_at %><p>
+<p><%= "Movie Count: #{director.movie_count}" if params[:sort] == 'moviecount' %>
 <%= button_to 'Edit', "/directors/#{director.id}/edit", method: :get %><br/>
 <%= button_to 'Delete', "/directors/#{director.id}", method: :delete %><br/>
+
 <% end %>
 <br/>
 <h4><%= link_to 'New Director', '/directors/new' %></h4>
